scrollbars fixed

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -43,26 +43,37 @@ a, button {
 }
 
 ::-webkit-scrollbar {
-    width: 8px;
+  height: 8px;
+  width: 6px;
 }
 
-/*!* Track *!*/
-/*::-webkit-scrollbar-track {*/
-/*    box-shadow: inset 0 0 5px grey;*/
-/*    border-radius: 10px;*/
-/*}*/
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 1px grey;
+}
 
 /* Handle */
-::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb:vertical {
     background-color: #606a75;
-    border-radius: 10px;
+    border-radius: 5px;
 }
+
+/* Handle */
+::-webkit-scrollbar-thumb:horizontal {
+  background: #c1c3c4;
+}
+
+ /*Handle on hover*/
+::-webkit-scrollbar-thumb:horizontal:hover {
+  background: darkgray;
+}
+
 
 .glyphicon {
   position: relative;
   top: 1px;
   display: inline-block;
-  font-family: 'Glyphicons Halflings';
+  font-family: 'Glyphicons Halflings', serif;
   font-style: normal;
   font-weight: normal;
   line-height: 1;
@@ -9731,4 +9742,8 @@ body {
 
 .checkbox-round:checked {
   background-color: #1ab394;
+}
+
+.scroll{
+  overflow-x: scroll;
 }
